Fix audio spacing and cutoff at 1000 char

--- a/nearby-wiki/style.css
+++ b/nearby-wiki/style.css
@@ -238,3 +238,12 @@ body, html {
   height: 100%;
   width: 100%;
 }
+
+.distance {
+  font-size: 1.25em;
+}
+
+.distance a {
+  font-size: 0.5em;
+  color: white;
+}
